@@ -474,6 +474,25 @@ void show_help(void)
 		"                                      The default value is zero. It means:\n"
 		"                                      there is no size limit.\n"
 		"\n"
+		"  UD_FRAGMENTS_THRESHOLD              Ignore files that have less number of\n"
+		"                                      fragments than specified by this\n"
+		"                                      parameter. The default value is zero.\n"
+		"                                      It means: there is no fragments threshold.\n"
+		"\n"
+		"  UD_TIME_LIMIT                       Specify the time limit for the\n"
+		"                                      defragmentation process. When specified\n"
+		"                                      interval elapses volume defragmentation\n"
+		"                                      or optimization job will be stopped.\n"
+		"                                      Time interval must be specified in the\n"
+		"                                      following form: Ay Bd Ch Dm Es. Here\n"
+		"                                      A,B,C,D,E represents any integer numbers;\n"
+		"                                      y,d,h,m,s suffixes are used for years,\n"
+		"                                      days, hours, minutes and seconds.\n"
+		"                                      Par example, 20 minutes 5 seconds will\n"
+		"                                      be represented as 20m 5s. The default\n"
+		"                                      value is an empty string which means:\n"
+		"                                      no time limit exists.\n"
+		"\n"
 		"  UD_REFRESH_INTERVAL                 Specify the progress indicator refresh\n"
 		"                                      interval in milliseconds. The default\n"
 		"                                      value is 500.\n"
