@@ -51,3 +51,5 @@ EXPORTS
 	winx_unregister_boot_exec_command@4
 	winx_dbg_print
 	winx_debug_print@4
+	winx_str2time@4
+	winx_time2str@16
