@@ -7,7 +7,8 @@ nativedll   = 1
 src = {
 	"error.c", "event.c", "keyboard.c", "keytrans.c", "mem.c", "stdio.c",
 	"zenwinx.c", "misc.c", "ldr.c", "thread.c", "privilege.c",
-	"reg.c", "volume.c", "file.c", "env.c", "dbg.c"
+	"reg.c", "volume.c", "file.c", "env.c", "dbg.c", "time.c", 
+	"int64.c"
 }
 rc = { "zenwinx.rc" }
 
