@@ -51,3 +51,5 @@ EXPORTS
 	winx_unregister_boot_exec_command
 	winx_dbg_print
 	winx_debug_print
+	winx_str2time
+	winx_time2str
